Project vapor_auth_be {
    database_type: "postgres"
    note: '''
    This is the database schema for the vapor_auth_be project.
    '''
}

Enum Authority {
    MEMBER_UPDATE
    MEMBER_DELETE
    ROLE_CREATE
    ROLE_UPDATE
    ROLE_DELETE
    GROUP_UPDATE
    GROUP_DELETE
}

Table role {
    id int [increment]
    name string
    group_name string
    external_authority string[]
    authority Authority

    Indexes {
        (name, group_name) [pk]
    }
}

Table user {
    uuid string [pk, note: "from the idp"]
    created_at timestamp
}

Table user_group {
    user_uuid string [ref: > user.uuid]
    group_name string [ref: > group.name]
    created_at timestamp

    Indexes {
        (user_uuid, group_uuid) [pk]
    }
}

Table user_role {
    user_uuid string [ref: > user.uuid]
    group_name string [ref: > group.name]
    role_id int [ref: > role.id]

    Indexes {
        (user_uuid, group_name) [pk]
    }
}

Table group {
    name string [pk, unique]
    description string
    created_at timestamp
}